--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   <!-- Form handling (keep your endpoint) -->
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    const FORM_ENDPOINT = "https://formspree.io/f/YOUR_FORM_ID"; // TODO: replace
+    const FORM_ENDPOINT = "https://formspree.io/f/xanlplbd"; // TODO: replace
     const form = document.getElementById('leadForm');
     const status = document.getElementById('status');
     form.addEventListener('submit', async (e) => {
